--- a/hw1/report/hw1_answer.tex
+++ b/hw1/report/hw1_answer.tex
@@ -11,7 +11,7 @@
 
 \title{Assignment 1: Imitation Learning}
 \author{huseyinabanox@gmail.com}
-\date{June 2022}
+\date{December 2022}
 
 % Document
 \begin{document}
@@ -70,7 +70,24 @@
     First thing to play with is the learning rate.
     After finding a reasonable LR, then training steps are adjusted.
 
-    \hspace*{-1.5in}
+    \hspace*{-1.0in}
     \includegraphics[scale=0.4]{q1.3_plots}
+
+    \section{DAgger}
+
+    \subsection{Answer}
+
+    DAgger implementation is similar.
+
+    \subsection{Answer}
+
+    Ant and Walker2D environments are run with DAgger.
+    Training steps are set to 2K. Learning rate is set to 0.001.
+
+    \hspace*{-1.0in}
+    \includegraphics[scale=0.35]{q2.2.1_plots}
+
+    \hspace*{-1.0in}
+    \includegraphics[scale=0.35]{q2.2.2_plots}
 
 \end{document}
