--- a/hw1/report/hw1_answer.tex
+++ b/hw1/report/hw1_answer.tex
@@ -69,9 +69,16 @@
     Mean and std results indicate learning is not happening.
     First thing to play with is the learning rate.
     After finding a reasonable LR, then training steps are adjusted.
+    See the first figure.
 
-    \hspace*{-1.0in}
-    \includegraphics[scale=0.4]{q1.3_plots}
+
+    \begin{figure}
+        \centering
+        \hspace*{-0.5in}
+        \includegraphics[scale=0.35]{q1.3_plots}
+        \caption{Behaviour Cloning-Walker2d}
+    \end{figure}
+
 
     \section{DAgger}
 
@@ -84,10 +91,16 @@
     Ant and Walker2D environments are run with DAgger.
     Training steps are set to 2K. Learning rate is set to 0.001.
 
-    \hspace*{-1.0in}
-    \includegraphics[scale=0.35]{q2.2.1_plots}
+    \begin{figure}
+        \centering
+        \includegraphics[scale=0.3]{q2.2.1_plots}
+        \caption{DAgger-Ant}
+    \end{figure}
 
-    \hspace*{-1.0in}
-    \includegraphics[scale=0.35]{q2.2.2_plots}
+    \begin{figure}
+        \centering
+        \includegraphics[scale=0.3]{q2.2.2_plots}
+        \caption{DAgger-Walker2d}
+    \end{figure}
 
 \end{document}
