- clean up - hw2 q4 update.

--- a/hw2/report/hw2_answer.tex
+++ b/hw2/report/hw2_answer.tex
@@ -80,5 +80,7 @@
 
     The chart above shows performance for different reward-to-go and baseline parameter configurations.
     Reward-to-go always performs better.
+    However, the one with baseline was expected to perform better with less variance which seems not to be the case.
+    It is not clear whether this is bacause of random initialization or implementation issues.
 
 \end{document}
