--- a/hw2/report/hw2_answer.tex
+++ b/hw2/report/hw2_answer.tex
@@ -39,7 +39,7 @@
     \subsection{Experiment 2}
 
     \hspace*{-0.5in}
-    \includegraphics[scale=0.35]{q2_grid_plot}
+    \includegraphics[scale=0.35]{q2/q2_grid_plot}
 
     A grid search with default parameters shows that it is possible to reach the target reward of 1000 with learning rate 0.01 and batch size 200 or with learning rate 0.02 and batch size 300.
     The first options seems to be more stable.
