hw4 question 2 implementation and report.

--- a/hw4/report/hw4_answer.tex
+++ b/hw4/report/hw4_answer.tex
@@ -44,4 +44,11 @@
 
     \section*{Problem 2}
 
+    Train AverageReturn is expected to be around -160 and Eval AverageReturn is expected to be around -70 to -50.
+
+    \includegraphics[scale=0.9]{q2/q2}
+
+    Actual returns are around the expected values.
+
+
 \end{document}
