--- a/hw4/report/hw4_answer.tex
+++ b/hw4/report/hw4_answer.tex
@@ -96,7 +96,7 @@
     Increasing action horizon improves average return but also increases variance.
     The final difference is not too much.
     The most apparent effect increasing the horizon is seems to be increasing the training speed.
-    Again the value is obtained using the intermediate values.
+    Again the best value is obtained using the intermediate values.
 
     \section*{Problem 5}
 
