q6 implementation and reporting complete.

--- a/hw4/report/hw4_answer.tex
+++ b/hw4/report/hw4_answer.tex
@@ -115,4 +115,14 @@
     4 iteration cem yields better return at the cost of dramatically longer iterations.
     2 iteration cem provides better value by providing a better return/duration ratio.
 
+    \section*{Problem 6}
+
+    \hspace*{-0.6in}
+    \includegraphics[scale=0.5]{q6/q6}
+
+    The chart shows the effect of collecting model trajectory while training sac policy.
+    With 0 model trajectory (no model trajectory) training stagnates.
+    With model trajectory of length 1, training improves.
+    With model trajectory of length 10 learning is faster.
+
 \end{document}
