fix: colab dependencies in hw1

--- a/hw1/cs285/scripts/run_hw1.ipynb
+++ b/hw1/cs285/scripts/run_hw1.ipynb
@@ -96,7 +96,7 @@
         "        xpra \\\n",
         "        xserver-xorg-dev \\\n",
         "        xvfb \\\n",
-        "        python-opengl \\\n",
+        "        python3-opengl \\\n",
         "        ffmpeg"
       ]
     },
@@ -114,6 +114,7 @@
         "%cd $SYM_PATH\n",
         "!git clone https://github.com/berkeleydeeprlcourse/homework_fall2022.git\n",
         "%cd homework_fall2022/hw1\n",
+        "%pip install swig # needed to build box2d in the pip install\n",
         "%pip install -r requirements_colab.txt\n",
         "%pip install -e ."
       ]
